--- a/src/component/header1/header.css
+++ b/src/component/header1/header.css
@@ -146,6 +146,10 @@ nav .main .down ul li {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    background-color: #fff;
   }
 
   .leftSidebar {
@@ -171,10 +175,17 @@ nav .main .down ul li {
     position: absolute;
     left: 0;
     margin-right: auto;
+
+  }
+
+  .main .menu-button.left span,
+  .main .menu-button.right span {
+    font-size: 50px;
   }
 
   .main .menu-button.right {
     display: flex;
+
   }
 }
 
