--- a/src/pages/Products/productlist.scss
+++ b/src/pages/Products/productlist.scss
@@ -1,5 +1,4 @@
-.body {
-    width: 100%;
+.product {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,88 +14,84 @@
         .bigScreen-wrapper {
             width: 100%;
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: flex-start;
             height: auto;
             margin-top: 50px;
-            padding-right: 30px;
+
 
             .left {
-                width: 450px;
+                margin-right: 20px;
+                width: 380px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: flex-start;
 
-                div {
+                .type {
+                    position: relative;
                     width: 100%;
-
-                    h1 {
-                        background-color: white;
-                        color: black;
-                        cursor: pointer;
-                    }
-
-                    select {
-                        width: 100%;
-                        height: 40px;
-                        font-size: 30px;
-                        border: none;
-                        cursor: pointer;
-
-                    }
-
-                    &:hover {
-                        padding-left: 7px;
-                        background-color: black;
-                        transition: 0.5s;
-                    }
+                    left: 0;
+                    font-size: 30px;
+                    height: 40px;
+                    margin-top: 40px;
+                    margin-bottom: 60px;
                 }
 
+                select {
+                    width: 100%;
+                    height: 40px;
+                    font-size: 30px;
+                }
+
+                .info {
+                    margin-top: 50px;
+                    display: flex;
+                    width: 78%;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
+
+                    select {
+                        position: relative;
+                        width: 100%;
+                        left: 0;
+                        font-size: 30px;
+                        height: 40px;
+                    }
+
+                    .range {
+                        width: 100%;
+                        margin-top: 50px;
+                    }
+                }
             }
 
             .right {
-                width: 1300px;
+                width: 1200px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: flex-start;
 
-                .info {
-                    display: flex;
-                    width: 78%;
-                    justify-content: space-between;
-                    align-items: flex-start;
-                    height: auto;
-
-                    select,
-                    div {
-                        position: relative;
-                        width: 45%;
-                        left: 0;
-                        font-size: 30px;
-                        height: 40px;
-
-                        input {
-                            width: 100%;
-                            height: 100%;
-                        }
-                    }
-                }
 
                 .productGroup {
                     width: 100%;
                     display: flex;
-                    justify-content: space-between;
+                    justify-content: flex-start;
                     align-items: flex-start;
                     height: auto;
                     flex-wrap: wrap;
-                    margin-top: 30px;
 
                     .product {
-                        width: 30%;
+                        margin: 20px 5px;
+                        width: 230px;
                         height: auto;
-                        margin: 0px 20px 15px 0px;
+
 
                         img {
                             width: 100%;
-                            height: 350px;
+                            height: 220px;
                         }
 
 
@@ -176,8 +171,7 @@
 }
 
 @media only screen and (max-width: 1550px) {
-    .body {
-        width: 100%;
+    .product {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -193,54 +187,66 @@
             .bigScreen-wrapper {
                 width: 100%;
                 display: flex;
-                justify-content: space-around;
+                justify-content: space-between;
                 align-items: flex-start;
                 height: auto;
                 margin-top: 50px;
-                padding: 0px 30px;
 
 
                 .left {
-                    width: 25%;
                     margin-right: 20px;
+                    width: 380px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    align-items: flex-start;
 
-                    div {
-                        select {
-                            width: 100%;
-                            height: 40px;
-                            font-size: 30px;
-                        }
+                    .type {
+                        position: relative;
+                        width: 100%;
+                        left: 0;
+                        font-size: 30px;
+                        height: 40px;
+                        margin-top: 40px;
+                        margin-bottom: 60px;
                     }
 
+                    select {
+                        width: 100%;
+                        height: 40px;
+                        font-size: 30px;
+                    }
+
+                    .info {
+                        margin-top: 50px;
+                        display: flex;
+                        width: 78%;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: flex-start;
+
+                        select {
+                            position: relative;
+                            width: 100%;
+                            left: 0;
+                            font-size: 30px;
+                            height: 40px;
+                        }
+
+                        .range {
+                            width: 100%;
+                            margin-top: 50px;
+                        }
+                    }
                 }
 
                 .right {
-                    width: 80%;
+                    width: 1200px;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: flex-start;
 
-                    .info {
-                        display: flex;
-                        width: 100%;
-                        justify-content: space-between;
-                        align-items: flex-start;
-
-                        select,
-                        div {
-                            position: relative;
-                            width: 45%;
-                            left: 0;
-                            font-size: 30px;
-                            height: 40px;
-
-                            input {
-                                width: 100%;
-
-                            }
-                        }
-                    }
 
                     .productGroup {
                         width: 100%;
@@ -251,13 +257,14 @@
                         flex-wrap: wrap;
 
                         .product {
+                            margin: 20px 5px;
                             width: 30%;
                             height: auto;
 
 
                             img {
                                 width: 100%;
-                                height: 350px;
+                                height: 220px;
                             }
 
 
@@ -337,9 +344,183 @@
     }
 }
 
-@media only screen and (max-width: 800px) {
-    .body {
-        width: 100vw;
+@media only screen and (max-width: 991px) {
+    .product {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .bigScreen {
+            width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .bigScreen-wrapper {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-start;
+                height: auto;
+                margin-top: 50px;
+
+
+                .left {
+                    margin-right: 20px;
+                    width: 35%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    align-items: flex-start;
+
+                    .type {
+                        position: relative;
+                        width: 100%;
+                        left: 0;
+                        font-size: 30px;
+                        height: 40px;
+                        margin-top: 40px;
+                        margin-bottom: 60px;
+                    }
+
+                    select {
+                        width: 100%;
+                        height: 40px;
+                        font-size: 30px;
+                    }
+
+                    .info {
+                        margin-top: 50px;
+                        display: flex;
+                        width: 78%;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: flex-start;
+
+                        select {
+                            position: relative;
+                            width: 100%;
+                            left: 0;
+                            font-size: 30px;
+                            height: 40px;
+                        }
+
+                        .range {
+                            width: 100%;
+                            margin-top: 50px;
+                        }
+                    }
+                }
+
+                .right {
+                    width: 65%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
+
+
+                    .productGroup {
+                        width: 100%;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                        height: auto;
+                        flex-wrap: wrap;
+
+                        .product {
+                            margin: 20px 5px;
+                            width: 45%;
+                            height: auto;
+
+
+                            img {
+                                width: 100%;
+                                height: 220px;
+                            }
+
+
+                        }
+
+
+                    }
+                }
+            }
+
+        }
+
+        .smallScreen {
+            display: none;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        .map {
+            width: 100vw;
+            height: auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+
+            .mapContent {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: flex-start;
+                padding: 0px 25px;
+                width: 100%;
+                height: 100%;
+
+                .left {
+                    width: 850px;
+                    height: 600px;
+                }
+
+                .right {
+                    margin-left: 50px;
+
+
+                    div {
+                        &:first-child {
+                            height: 60px;
+
+                        }
+
+                        &:nth-child(2) {
+                            margin: 10px 0px;
+                            height: 150px;
+                        }
+
+                        &:nth-child(3) {
+                            margin: 10px 0px;
+                            height: 120px;
+                        }
+
+                        &:nth-child(4) {
+                            margin: 10px 0px;
+                            height: 220px;
+                        }
+
+
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+            }
+
+
+
+        }
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .product {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -353,7 +534,7 @@
 
         section.smallScreen {
             display: flex;
-            width: 100%;
+            width: 100vw;
             padding: 0px 25px;
 
             .info {
@@ -402,12 +583,14 @@
                 align-items: flex-start;
                 flex-wrap: wrap;
                 width: 100%;
+                height: auto;
 
                 .product {
                     img {
                         width: 100%;
                         height: 300px;
                     }
+
 
                     width: 48%;
                     height: auto;
