--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -8,39 +8,86 @@
 .body .bigScreen {
   width: 100%;
   height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .body .bigScreen .bigScreen-wrapper {
   width: 100%;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   height: auto;
+  margin-top: 50px;
+  padding-right: 30px;
 }
 .body .bigScreen .bigScreen-wrapper .left {
-  width: 400px;
+  width: 450px;
+}
+.body .bigScreen .bigScreen-wrapper .left div {
+  width: 100%;
+}
+.body .bigScreen .bigScreen-wrapper .left div h1 {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+.body .bigScreen .bigScreen-wrapper .left div select {
+  width: 100%;
+  height: 40px;
+  font-size: 30px;
+  border: none;
+  cursor: pointer;
+}
+.body .bigScreen .bigScreen-wrapper .left div:hover {
+  padding-left: 7px;
+  background-color: black;
+  transition: 0.5s;
 }
 .body .bigScreen .bigScreen-wrapper .right {
   width: 1300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 .body .bigScreen .bigScreen-wrapper .right .info {
   display: flex;
+  width: 78%;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: auto;
+}
+.body .bigScreen .bigScreen-wrapper .right .info select,
+.body .bigScreen .bigScreen-wrapper .right .info div {
+  position: relative;
+  width: 45%;
+  left: 0;
+  font-size: 30px;
+  height: 40px;
+}
+.body .bigScreen .bigScreen-wrapper .right .info select input,
+.body .bigScreen .bigScreen-wrapper .right .info div input {
+  width: 100%;
+  height: 100%;
 }
 .body .bigScreen .bigScreen-wrapper .right .productGroup {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   height: auto;
   flex-wrap: wrap;
+  margin-top: 30px;
 }
 .body .bigScreen .bigScreen-wrapper .right .productGroup .product {
-  margin: 20px 20px;
-  width: 300px;
+  width: 30%;
   height: auto;
+  margin: 0px 20px 15px 0px;
 }
 .body .bigScreen .bigScreen-wrapper .right .productGroup .product img {
   width: 100%;
-  height: 300px;
+  height: 350px;
 }
 .body .smallScreen {
   display: none;
@@ -60,25 +107,165 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   padding: 0px 25px;
   width: 100%;
+  height: 100%;
 }
 .body .map .mapContent .left {
   width: 850px;
-  height: 500px;
+  height: 600px;
 }
 .body .map .mapContent .right {
   margin-left: 50px;
 }
 .body .map .mapContent .right div {
   width: 100%;
+  height: auto;
+}
+.body .map .mapContent .right div:first-child {
+  height: 60px;
+}
+.body .map .mapContent .right div:nth-child(2) {
+  margin: 10px 0px;
   height: 150px;
 }
+.body .map .mapContent .right div:nth-child(3) {
+  margin: 10px 0px;
+  height: 120px;
+}
+.body .map .mapContent .right div:nth-child(4) {
+  margin: 10px 0px;
+  height: 220px;
+}
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1550px) {
   .body {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .body .bigScreen {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .body .bigScreen .bigScreen-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    height: auto;
+    margin-top: 50px;
+    padding: 0px 30px;
+  }
+  .body .bigScreen .bigScreen-wrapper .left {
+    width: 25%;
+    margin-right: 20px;
+  }
+  .body .bigScreen .bigScreen-wrapper .left div select {
+    width: 100%;
+    height: 40px;
+    font-size: 30px;
+  }
+  .body .bigScreen .bigScreen-wrapper .right {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .body .bigScreen .bigScreen-wrapper .right .info {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .body .bigScreen .bigScreen-wrapper .right .info select,
+  .body .bigScreen .bigScreen-wrapper .right .info div {
+    position: relative;
+    width: 45%;
+    left: 0;
+    font-size: 30px;
+    height: 40px;
+  }
+  .body .bigScreen .bigScreen-wrapper .right .info select input,
+  .body .bigScreen .bigScreen-wrapper .right .info div input {
+    width: 100%;
+  }
+  .body .bigScreen .bigScreen-wrapper .right .productGroup {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: auto;
+    flex-wrap: wrap;
+  }
+  .body .bigScreen .bigScreen-wrapper .right .productGroup .product {
+    width: 30%;
+    height: auto;
+  }
+  .body .bigScreen .bigScreen-wrapper .right .productGroup .product img {
+    width: 100%;
+    height: 350px;
+  }
+  .body .smallScreen {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .body .map {
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .body .map .mapContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 0px 25px;
+    width: 100%;
+    height: 100%;
+  }
+  .body .map .mapContent .left {
+    width: 850px;
+    height: 600px;
+  }
+  .body .map .mapContent .right {
+    margin-left: 50px;
+  }
+  .body .map .mapContent .right div {
+    width: 100%;
+    height: auto;
+  }
+  .body .map .mapContent .right div:first-child {
+    height: 60px;
+  }
+  .body .map .mapContent .right div:nth-child(2) {
+    margin: 10px 0px;
+    height: 150px;
+  }
+  .body .map .mapContent .right div:nth-child(3) {
+    margin: 10px 0px;
+    height: 120px;
+  }
+  .body .map .mapContent .right div:nth-child(4) {
+    margin: 10px 0px;
+    height: 220px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .body {
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,6 +276,8 @@
   }
   .body section.smallScreen {
     display: flex;
+    width: 100%;
+    padding: 0px 25px;
   }
   .body section.smallScreen .info {
     display: flex;
@@ -102,16 +291,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 10px;
   }
   .body section.smallScreen .info div input {
     height: 50px;
-    width: 45%;
-    font-size: 20px;
+    width: 62%;
+    font-size: 25px;
   }
   .body section.smallScreen .info div select {
     display: flex;
-    width: 45%;
+    width: 23%;
     font-size: 25px;
   }
   .body section.smallScreen .info div select option {
@@ -124,17 +312,17 @@
   .body section.smallScreen .productGroup {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
+    width: 100%;
   }
   .body section.smallScreen .productGroup .product {
-    display: block;
-    width: 350px;
-    height: 500px;
+    width: 48%;
+    height: auto;
   }
   .body section.smallScreen .productGroup .product img {
-    width: 300px;
+    width: 100%;
     height: 300px;
   }
   .body .map {
@@ -149,6 +337,8 @@
   }
   .body .map .mapContent .right {
     width: 100%;
+    margin-top: 40px;
+    margin-left: 0;
   }
   .body .map .mapContent .right div {
     height: 150px;
