--- a/fd/src/pages/Footer/Footer.scss
+++ b/fd/src/pages/Footer/Footer.scss
@@ -91,6 +91,7 @@
 
         background-color: rgb(241, 241, 241);
         height: auto;
+        padding: 30px 0px;
 
         .upper {
             justify-content: center;
