--- a/fd/src/pages/Products/productlist.scss
+++ b/fd/src/pages/Products/productlist.scss
@@ -357,7 +357,7 @@
 
                             img {
                                 width: 100%;
-                                height: 220px;
+                                height: auto;
                             }
 
 
@@ -711,7 +711,7 @@
                 .product {
                     img {
                         width: 100%;
-                        height: 300px;
+                        height: auto;
                     }
 
                     margin: 10px 0px;
