--- a/fd/src/pages/main/main.css
+++ b/fd/src/pages/main/main.css
@@ -268,7 +268,7 @@
   }
   .body .bigScreen .bigScreen-wrapper .right .productGroup .product img {
     width: 100%;
-    height: 350px;
+    height: auto;
   }
   .body .smallScreen {
     display: none;
@@ -402,12 +402,13 @@
     width: 100%;
   }
   .body section.smallScreen .productGroup .product {
+    margin: 10px 0px;
     width: 48%;
     height: auto;
   }
   .body section.smallScreen .productGroup .product img {
     width: 100%;
-    height: 300px;
+    height: auto;
   }
   .body section.smallScreen .productGroup nav {
     position: relative;
@@ -447,9 +448,21 @@
     margin-left: 0;
   }
   .body .map .mapContent .right div {
-    height: 150px;
+    height: auto !important;
   }
   .body .map .mapContent .right div p {
     width: 100%;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .body section.smallScreen .info select {
+    height: 50px;
+    font-size: 25px;
+  }
+  .body section.smallScreen .productGroup .product img {
+    height: auto;
+  }
+  select option {
+    font-size: 20px;
   }
 }/*# sourceMappingURL=main.css.map */
