--- a/fd/src/pages/Products/productlist.scss
+++ b/fd/src/pages/Products/productlist.scss
@@ -787,3 +787,175 @@
         }
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .product {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
+
+        section.bigScreen {
+            display: none;
+        }
+
+        section.smallScreen {
+
+            .info {
+
+                div {
+                    margin-top: 25px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
+
+                    select {
+                        display: flex;
+                        width: 23%;
+                        font-size: 20px;
+                        margin-top: 0px;
+
+                        option {
+                            z-index: -1;
+                        }
+                    }
+
+                    .search {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        width: 72%;
+                        font-size: 38px;
+                        height: 40px;
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+                        cursor: pointer;
+                        border: 2px rgb(197, 197, 197) solid;
+                        border-radius: 4px;
+                        padding-right: 5px;
+
+                        &:hover {
+                            border: 2px rgb(16, 16, 16) solid;
+                            transition: 0.5s;
+                        }
+
+                        .searchGlass {
+                            margin-left: 8px;
+                            font-size: 30px;
+                        }
+
+                        .type {
+                            height: 30px;
+
+                            font-size: 20px;
+                            position: relative;
+                            width: 100%;
+                            left: 0;
+                            border: none;
+                            outline: none;
+                        }
+                    }
+                }
+
+
+                select {
+                    height: 40px;
+                    font-size: 20px;
+                    margin-top: 10px;
+                }
+
+            }
+
+            .productGroup {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: flex-start;
+                flex-wrap: wrap;
+                width: 100%;
+                height: auto;
+
+                .product {
+                    img {
+                        width: 100%;
+                        height: auto;
+                    }
+
+                    margin: 10px 0px;
+
+                    width: 48%;
+                    height: auto;
+                }
+
+                nav {
+                    position: relative;
+                    top: 50px;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+
+                    .pagination {
+                        color: gray;
+
+                        .page-item {
+                            margin: 0px 8px;
+
+                            .page-link {
+                                color: gray;
+                                border-radius: 5px;
+
+                                &:hover {
+                                    color: black;
+                                    transition: 0.3s;
+                                    border: 1px solid black;
+
+
+                                }
+                            }
+
+
+                        }
+
+                    }
+                }
+            }
+
+        }
+
+        .map {
+            width: 100%;
+
+            .mapContent {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+
+
+                .right {
+                    width: 100%;
+                    margin-top: 40px;
+                    margin-left: 0;
+
+                    div {
+
+                        p {
+
+                            width: 100%;
+                        }
+
+                        height: 150px;
+                    }
+                }
+            }
+
+
+        }
+    }
+}
