--- a/fd/src/component/header1/Modal/Modal.scss
+++ b/fd/src/component/header1/Modal/Modal.scss
@@ -49,6 +49,9 @@
                 width: 100%;
                 background-color: white;
                 height: 40px;
+                // display: flex;
+                // justify-content: space-between;
+                // align-items: center;
 
                 .small-input {
                     width: 100%;
