--- a/fd/src/component/header2/header.css
+++ b/fd/src/component/header2/header.css
@@ -32,7 +32,6 @@
 }
 
 
-
 .nav2 .main2 .down {
   background-color: black;
   color: #fff;
@@ -50,6 +49,7 @@
   margin-top: 15px;
   padding: 0;
   display: flex;
+  width: 100%;
 }
 
 
